# python-launchd

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG.rst  COPYING  MANIFEST.in  README.rst  example.py  pyproject.toml  requirements-style.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
launchd/: __init__.py  cmd.py  launchctl.py  plist.py  service.py  util.py
launchd/tests/: cmd.py  launchctl.py  plist.py  test_cmd.py  test_launchctl.py  test_plist.py
